--- a/Parallel_RVD/Parallel_RVD.vcxproj
+++ b/Parallel_RVD/Parallel_RVD.vcxproj
@@ -78,6 +78,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Command_linecpp.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Mesh_io.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Command_line.h" />
+    <ClInclude Include="Common.h" />
+    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Mesh_io.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
