--- a/Parallel_RVD/Parallel_RVD.vcxproj
+++ b/Parallel_RVD/Parallel_RVD.vcxproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 7.5.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -60,6 +61,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -98,9 +100,11 @@
   <ItemGroup>
     <ClInclude Include="Command_line.h" />
     <ClInclude Include="Common.h" />
+    <ClInclude Include="CudaHelper.h" />
     <ClInclude Include="DrawGraphics.h" />
     <ClInclude Include="Glut_generator.h" />
     <ClInclude Include="math_3d.h" />
+    <ClInclude Include="Math_basics.cuh" />
     <ClInclude Include="Math_basics.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Mesh_io.h" />
@@ -112,7 +116,14 @@
     <ClInclude Include="RVD_Vertex.h" />
     <ClInclude Include="SeedStore.h" />
   </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="Cudaclass.cu">
+      <FileType>Document</FileType>
+    </CudaCompile>
+    <CudaCompile Include="Math_basics.cu" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 7.5.targets" />
   </ImportGroup>
 </Project>
